# VHH_structural_paratope_clustering_tool

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
tests/: test_clustering.py  test_features.py  test_numbering.py  test_paratope.py  test_parsing.py  test_sequence_generator.py  test_structural_clustering.py  test_structure.py  test_structure_prediction.py
vhh_clustering/: __init__.py  cdr_annotation.py  clustering.py  features.py  parsing.py  sequence_generator.py  structural_clustering.py  structure_prediction.py
vhh_paratope_clustering/: __init__.py  clustering.py  numbering.py  paratope.py  structure.py
